# SigProc

./: .gitignore  LICENSE  README.md  setup.py
SigProc/: FeatureNormalize.py  FeatureStacker.py  SphinxMFCC.py  __init__.py  amplify.py  audiofmt.py  bic.py  bicproc.py  cheby1_v2.py  chromagram.py  default_proc.py  emph.py  filterbank.py  highlight.py  histogrammer.py  ingest.py  logger.py  main.py  normalize.py  plh.py  plugin_manager.py  process.py  recipe.py  riff.py  spectralflux.py  spectrogram.py  timeinfo.py  vocoder.py  zcr.py
recipes/: chromagram_16k.ini  mfcc_16k.ini  mfcc_sdc_16k_7132.ini  mfcc_sdc_16k_7137.ini  segmentation.ini  spectrogram16k100.ini  spectrogram16k50.ini  superflux_16k.ini
src/: .gitignore  CMakeLists.txt  README.md  configure.py
src/sigproc/: CMakeLists.txt
src/sigproc/bell/: CMakeLists.txt  base.cpp  base.hpp
src/sigproc/bell/algorithm/: dct.cpp  dct.hpp  directform.cpp  directform.hpp  mfcc.cpp  mfcc.hpp  window.cpp  window.hpp  zbfilter.cpp  zbfilter.hpp
src/sigproc/bell/algorithm/test/: dct_test.cpp  directform_test.cpp  mfcc_test.cpp  zbfilter_test.cpp
src/sigproc/bell/ffmpeg/: decode.cpp  decode.hpp  decode_save.cpp
src/sigproc/bell/ffmpeg/tools/: framegen.cpp  resample.cpp
src/sigproc/bell/fftw/: rfft.cpp  rfft.hpp
src/sigproc/bell/fftw/test/: rfft_test.cpp
src/sigproc/bell/tools/: framegen.cpp  resample.cpp  resample2.cpp
src/sigproc/common/: CMakeLists.txt  argparse.cpp  argparse.hpp  exception.hpp  format.cpp  format.hpp  logging.cpp  logging.hpp  matfile.hpp  string.cpp  string.hpp  wavfile.cpp  wavfile.hpp
src/sigproc/common/test/: format_test.cpp  wavfile_test.cpp
src/sigproc/common/unittest/: unittest.cpp  unittest.hpp  unittest_assert.cpp  unittest_assert.hpp  unittest_main.cpp
src/sigproc/framework/: CMakeLists.txt  composite.cpp  composite.hpp  compositestream.cpp  compositestream.hpp  config.hpp  enum.cpp  enum.hpp  factory.cpp  factory.hpp  graph.cpp  graph.hpp  graphdef.cpp  graphdef.hpp  lisp.cpp  lisp.hpp  lispexpr.cpp  lispexpr.hpp  node.cpp  node.hpp  port.cpp  port.hpp  processor.cpp  processor.hpp  registry.cpp  registry.hpp  stream.cpp  stream.hpp
src/sigproc/framework/test/: composite_test.cpp  compositestream_test.cpp  lisp_test.cpp
src/sigproc/nodes/: CMakeLists.txt  adder.cpp  adder.hpp
src/sigproc/nodes/test/: adder_test.cpp
src/util/: sigproc.cmake
